typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck20.ts.stderr
error: unimplemented
expand_export_info(IterableIterator)
File: $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck20.ts
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck20.ts:4:1
  |
4 | / function* g(): IterableIterator<Foo> {
5 | |     yield;
6 | |     yield * [new Baz];
7 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            79,
        ),
        hi: BytePos(
            102,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck20.ts:4:14
  |
4 | function* g(): IterableIterator<Foo> {
  |              ^^^^^^^^^^^^^^^^^^^^^^^

